src/test/06-Errors/error-return-missing-val.txt
error-return-missing-val.ck:3:5: error: function 'float foo()' was defined with return type 'float' -- but returning type 'void'
[3]     return;
        ^
error-return-missing-val.ck: ...in function 'float foo()'
